@@ -9,6 +9,7 @@ Author: Adrian A. Dragulescu
 Maintainer: Adrian A. Dragulescu <adrian.dragulescu@gmail.com>
 Description: Provide R functions to read/write/format Excel 2007 and Excel 97/2000/XP/2003 file formats.
 License: GPL-3
-URL: http://code.google.com/p/rexcel/
+URL: http://code.google.com/p/rexcel/, http://groups.google.com/group/R-package-xlsx
+BugReports: https://code.google.com/p/rexcel/issues/list
 
 
