@@ -20,8 +20,9 @@ is.Font(x)
 
   \item{color}{a character specifiying the font color.  Any
     color names as returned by \code{\link[grDevices]{colors}} can be
-    used.  For Excel 95 workbooks, only a subset of colors is
-    available, see the constant \code{INDEXED_COLORS_}.}
+    used.  Or, a hex character, e.g. "#FF0000" for red.  For Excel 95
+    workbooks, only a subset of colors is available, see the constant
+    \code{INDEXED_COLORS_}.} 
   
   \item{heightInPoints}{a numeric value specifying the font height.
   Usual values are 10, 12, 14, etc.}
